<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_about_playing_football"
                android:textSize="29sp"
                android:id="@+id/tv1"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>

             <TextView
               android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/tv1"
                android:text="@string/_1_choose_the_crroect_answer"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/tv2"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/tv2"
                 android:id="@+id/q1"
                android:text="@string/i_who_win_the_world_cup_inv2010"
                android:textSize="18sp"
                 android:textColor="@color/colorPrimaryDark"
                  android:layout_marginTop="8dp"
                 android:layout_marginLeft="21dp"
                  android:layout_marginBottom="8dp"/>
            <LinearLayout
                  android:layout_width="wrap_content"

                 android:layout_height="wrap_content"
                 android:id="@+id/l1"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/q1">
                <RadioGroup
                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/rg1"
                   android:orientation="horizontal">
                  <RadioButton
                      android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                      android:text="@string/aspane"
                      android:textColor="@color/colorAccent"
                      android:textSize="22sp"
                      android:id="@+id/r1"/>
                   <RadioButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                        android:text="@string/france"
                         android:textSize="22sp"
                         android:layout_marginLeft="12dp"
                         android:id="@+id/r2"
                         android:textColor="@color/colorAccent"
                                    />
                    <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                          android:text="@string/tanse"
                           android:textSize="22sp"
                           android:layout_marginLeft="12dp"
                           android:textColor="@color/colorAccent"
                            android:id="@+id/r3"
                                />
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/l1"
                 android:id="@+id/q2"
                 android:text="@string/ii_who_is_the_prefer_player"
                 android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorPrimaryDark"
                     />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/l2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/q2">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roban"
                    android:textSize="21sp"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/ch1"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messi"
                    android:textColor="@color/colorAccent"
                    android:textSize="21sp"
                    android:id="@+id/ch2"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salah"
                    android:textColor="@color/colorAccent"
                    android:textSize="21sp"
                    android:id="@+id/ch3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/l3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/l2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q3"
                    android:layout_marginRight="24dp"
                    android:text="@string/iii_who_train_france"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et1"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/l3"
                android:text="@string/v_how_play_ahly_and_zamalek"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:id="@+id/tv3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv3"
                android:id="@+id/l4"
                android:layout_marginTop="20dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ch4"
                    android:text="@string/_20"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="12dp"
                    android:textSize="12dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ch5"
                    android:text="@string/_44"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="30dp"
                    android:textSize="12dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ch6"
                        android:text="@string/_23"
                        android:layout_marginLeft="24dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12dp"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv4"
                    app:layout_constraintTop_toBottomOf="@+id/l4"
                    android:text="@string/vi_number_goals_of_classic"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv4"
                    android:id="@+id/l5">
                    <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_45_goals"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/r4"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100_goals"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_marginLeft="12dp"
                        android:id="@+id/r5"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_120_goals"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_marginLeft="12dp"
                        android:id="@+id/r6"
                        />
                </RadioGroup>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:id="@+id/b"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l5"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_lucky"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>